--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-  <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -49,7 +45,7 @@
 
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <div class="site-logo"><a href="index.html">ToDo<span>.</span> </a></div>
+          <div class="site-logo"><a href="index.html">ToDo</a></div>
           <div class="ml-auto">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
@@ -186,8 +182,7 @@
           <div class="col-md-12">
             <div class=" pt-5">
               <p class="copyright"><small>&copy;
-                  <script>document.write(new Date().getFullYear());</script> TO-DO. All Rights Reserved. Design by <a
-                    href="#" target="_blank">kickassInc</a></small></p>
+                  <script>document.write(new Date().getFullYear());</script> TO-DO </small></p>
             </div>
           </div>
 
