--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -45,7 +44,7 @@
 
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <div class="site-logo"><a href="index.html">ToDo</a></div>
+          <div class="site-logo"><a href="index.html">TODO++</a></div>
           <div class="ml-auto">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
@@ -68,7 +67,7 @@
 
         <div class="row align-items-center">
           <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
-            <h1 class="mb-3">Make a track of your task with our application</h1>
+            <h1 class="mb-3">Make A Track Of Your Daily Tasks With TODO++</h1>
             <p class="lead mx-auto desc mb-5">To-Do application to manage your day to day task
             <p class="text-center">
               <a href="#" class="btn btn-outline-white py-3 px-5">Login with Google</a>
@@ -86,8 +85,16 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5" data-aos="fade-up">
           <div class="col-md-8  section-heading">
-            <h2 class="heading mb-3">About US</h2>
-            <p>Add some sample text 
+            <h2 class="heading mb-3">About TODO++</h2>
+            <p>TODO++ is platform where you can manage and keep a track on your day to day tasks and provides you features like: <br> 
+
+              <ul style="text-align: left;">
+                <li>Minimalistic design & easy to use</li>
+                <li>Give support to create,read update and delete your todo tasks</li>
+                <li>Get updates about your tasks</li>
+                <li>Get your monthly progress report</li>
+
+              </ul>
               </p>
           </div>
         </div>
@@ -103,7 +110,7 @@
           <div class="col-md-8  section-heading">
             <span class="subheading">Get In Touch</span>
             <h2 class="heading mb-3">Contact Us</h2>
-            <p>Find any error or have any suggestion feel free to contact us
+            <p>Feel free to Mail us for providing suggestion and reporting any errors
             </p>
           </div>
         </div>
@@ -155,8 +162,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h3 class="text-dark">About TO DO </h3>
-            <p>Project for code Gym Project.</p>
+            <h3 class="text-dark">About Us</h3>
+            <p>TODO Application for codegym project by SY-A students</p>
           </div>
 
           <div class="col-md-4">
@@ -172,8 +179,8 @@
           </div>
 
            <div class="col-md-4">
-            <h3 class="text-dark">Disclamer</h3>
-            <p>Add some disclamer
+            <h3 class="text-dark"><a href="#">Github</a></h3>
+            <p>Dont forget to star our repository
             </p>
 
         </div>
