--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="mb-3">Make A Track Of Your Daily Tasks With TODO++</h1>
             <p class="lead mx-auto desc mb-5">To-Do application to manage your day to day task
             <p class="text-center">
-              <a href="#" class="btn btn-outline-white py-3 px-5">Login with Google</a>
+              <a href="http://localhost:8080/"  class="btn btn-outline-white py-3 px-5" target="_blank">Get Started</a>
             </p>
           </div>
         </div>
